<resources>
    <string name="app_name">RequestControl</string>
    <string name="lanche">Hot Dog:</string>
    <string name="limpar">Clean</string>
    <string name="adicionais">Additional:</string>
    <string name="batata">French fries</string>
    <string name="refrigerante">Soda</string>
    <string name="valor">Order Price:</string>
    <string name="salvar">Save</string>
    <string name="erroLanche">Hot dog name cannot be empty</string>
    <string name="erroRetirar">Select a way to receive the order</string>
    <string name="erroValor">Order price cannot be empty</string>
    <string name="camposLimpos">Clean registration fields</string>
    <string name="semAdicional">No additional selected</string>
    <string name="adicionaisSelecionados">Additional selected:</string>
    <string name="retirarlocal">Pick up on site</string>
    <string name="entregar">Deliver</string>
    <string name="formaPagamento">Form of payment:</string>
    <string name="cartao">Credit card</string>
    <string name="dinehiro">Cash payment</string>
    <string name="pix">Pix</string>
    <string name="erroFormaPagamento">Select a payment method</string>
    <string name="autor" translatable="false">Luan Riechi de Carvalho</string>
    <string name="curso">Software Engineering</string>
    <string name="email" translatable="false">luanriechi@alunos.utfpr.edu.br</string>
    <string name="descricao">Application that manages orders for a stall that sells hot dogs, registering orders and customers</string>
    <string name="sobre">App info</string>
    <string name="adicionar">Add</string>
    <string name="cadpedido">Register order</string>
    <string name="sobretitulo">App info</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editapedido">Edit order</string>
    <string name="temaClaro">Light Theme</string>
    <string name="temaEscuro">Dark Theme</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="mensagemAlerta">Do you want to delete this order?</string>
    <string name="lanches">Hot dogs</string>
    <string name="lancheExistente">A hot dog with that name already exists, choose another name!</string>
    <string name="aviso">Alert</string>
    <string name="ok">Ok</string>
    <string name="semLancheAlerta">it is not possible to register an order without first having a hot dog registered!</string>
    <string name="lancheUsado">It is not possible to delete this hot dog because it is being used.</string>
    <string name="excluirLanche">Do you want to delete this hot dog?</string>
    <string name="registrarLanche">Register hot dog</string>
    <string name="alterarLanche">Edit hot dog</string>
</resources>