<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdicionar"
        android:icon="@android:drawable/ic_menu_add"
        android:onClick="AdicionarMenu"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuitemLanches"
        android:onClick="LanchesMenu"
        android:title="@string/lanches" />
    <item
        android:id="@+id/menuItemSobre"
        android:onClick="SobreMenu"
        android:title="@string/sobre" />
    <group
        android:id="@+id/grupoTema"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemEscuro"
            android:title="@string/temaEscuro" />
        <item
            android:id="@+id/menuItemClaro"
            android:title="@string/temaClaro" />
    </group>
</menu>